--- a/TortillasCebanc/app/src/main/res/values/strings.xml
+++ b/TortillasCebanc/app/src/main/res/values/strings.xml
@@ -4,7 +4,8 @@
     <string name="nombre">Nombre:</string>
     <string name="direccion">Dirección:</string>
     <string name="telefono">Teléfono:</string>
-    <string name="salir">Atras</string>
+    <string name="atras">Atras</string>
+    <string name="salir">Salir</string>
     <string name="siguiente">Siguiente</string>
     <string name="añadir">Añadir</string>
     <string-array name="SpinnerArray">
