bebidas añadir (iñaki)
hemos añadido el boton de añadir para que se vayan añadiendo las bebidas
y la cantidad que piden , y luego suma el total de todo lo añadido

--- a/TortillasCebanc/app/src/main/res/values/strings.xml
+++ b/TortillasCebanc/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="telefono">Teléfono:</string>
     <string name="salir">Salir</string>
     <string name="siguiente">Siguiente</string>
+    <string name="añadir">Añadir</string>
     <string-array name="SpinnerArray">
         <item>Refresco de cola - 2€</item>
         <item>Limón - 2€</item>
