--- a/TortillasCebanc/app/src/main/res/values/strings.xml
+++ b/TortillasCebanc/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">TortillasCebanc</string>
-    <string name="introduce">Introduce tus datos</string>
+    <string name="introduce">Datos personales</string>
     <string name="nombre">Nombre:</string>
     <string name="direccion">Dirección:</string>
     <string name="telefono">Teléfono:</string>
@@ -8,6 +8,7 @@
     <string name="salir">Salir</string>
     <string name="siguiente">Siguiente</string>
     <string name="añadir">Añadir</string>
+    <string name="tortilla">Pedir Tortilla</string>
     <string-array name="SpinnerArray">
         <item>Refresco de cola - 2€</item>
         <item>Limón - 2€</item>
